--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stopwatch Task</title>
+    <title>Prodigy Stopwatch Task</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <div class="container">
         <h1>STOPWATCH</h1>
         <div id="display">00:00:00</div>
+        
         <div class="controls">
             <button id="startPause" onclick="startStop()">Start</button>
             <button onclick="lap()">Lap</button>
             <button onclick="reset()">Reset</button>
         </div>
+
         <ul id="lapsList"></ul>
     </div>
 
